Added some default styles

--- a/css/copy_me.less
+++ b/css/copy_me.less
@@ -1,8 +1,23 @@
 @import "base.less"; // Keep at top of file
 
+* {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
 
+ul.tabs, ul.tabs * {
+	box-sizing: content-box;
+	-moz-box-sizing: content-box;
+}
 
-
+table {
+	width: 100%;
+	
+	td, th {
+		padding: 3px;
+		vertical-align: middle;
+	}
+}
 
 
 
