--- a/css/base.less
+++ b/css/base.less
@@ -83,3 +83,13 @@
 		}
 	}
 }
+
+.columns(@num, @gap) {
+	-webkit-columns: @num;
+	-moz-columns: @num;
+	columns: @num;
+	
+	-webkit-column-gap: @gap;
+	-moz-column-gap: @gap;
+	column-gap: @gap;
+}
