--- a/css/copy_me.less
+++ b/css/copy_me.less
@@ -12,5 +12,5 @@
 
 
 
-@import "responsive.less" // Keep at bottom of file
+@import "responsive.less"; // Keep at bottom of file
 @import "content.less";   // Keep at bottom of file
