--- a/css/base/mixins-generic.less
+++ b/css/base/mixins-generic.less
@@ -1,3 +1,7 @@
+// =====================================================================
+// Set an element to be constrained to every breakpoint's maximum width.
+// =====================================================================
+
 .frame(@margin: 0px) {
 	@gutter: @margin * 2;
 	width: @desktop-small-min - @gutter;
@@ -16,11 +20,10 @@
 	}
 }
 
-.mobile-full() {
-	width: 90%;
-	margin-left: 5%;
-	margin-right: 5%;
-}
+
+// ======================================================
+// REstore previously `.frame()`d elements to 100% width.
+// ======================================================
 
 .frame-cancel() {
 	.clearer-cancel();
@@ -30,27 +33,33 @@
 	// FIXME: Do I need media queries here? I had them on eVersity, but I don't think I had to?
 }
 
-.cols-width(@num, @full-width, @margin: 10px) {
-	@gutter: @margin * 2;
-	@full-col: @full-width / 12;
-	@col-width: @full-col - @gutter;
+// ===============================================
+// .frame()’s mobile rules for manual application.
+// ===============================================
 
-	margin-left: @margin;
-	margin-right: @margin;
-	width: @num * @full-col - @gutter;
+.mobile-full() {
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
-.cols(@num, @float: left) {
-	float: @float;
 
-	.cols-width(@num, @desktop-small-min);
+// =============================================================================================
+// Assigns an element to the same number of grid columns in each breakpoint (except for mobile,
+// where everything is full width). It uses the `.cols-width()` mixin below, which can be called
+// manually if an element should be a different number of columns in different breakpoints.
+// =============================================================================================
+
+.cols(@num, @float: left) {
+
+	.cols-width(@num, @desktop-small-column-x, @float);
 
 	@media only screen and (min-width: @desktop-large-min) {
-		.cols-width(@num, @desktop-large-min);
+		.cols-width(@num, @desktop-large-column-x, @float);
 	}
 
 	@media only screen and (max-width: @tablet-max) and (min-width: @tablet-min) {
-		.cols-width(@num, @tablet-min);
+		.cols-width(@num, @tablet-column-x, @float);
 	}
 
 	@media only screen and (max-width: @mobile-large-max) {
@@ -60,6 +69,13 @@
 		float: none;
 	}
 }
+
+
+// ============================================================================================
+// The 'inner' parameter is for when you're already inside an element that's been used with
+// `.cols()`, or otherwise has the 10px horizontal margins applied. It removes margins from the
+// first and last elements, keeping the total width correct.
+// ============================================================================================
 
 .cols(inner, @num, @float: left) {
 	.cols(@num, @float);
@@ -72,6 +88,28 @@
 		margin-right: 0px;
 	}
 }
+
+
+// ===============================================================================================
+// Used by `.cols()` to calculate the widths for each breakpoint. The `@full-col` parameter is the
+// width of a full column before margins are subtracted, and by default it uses the column widths
+// derived in `sizes.less`.
+// ===============================================================================================
+
+.cols-width(@num, @full-col, @float: left, @margin: 10px,) {
+	@gutter: @margin * 2;
+	@col-width: @full-col - @gutter;
+
+	margin-left: @margin;
+	margin-right: @margin;
+	width: @num * @full-col - @gutter;
+}
+
+
+// ================================================================================================
+// Dark magic that takes a container of items and puts them side-by-side, evenly distributed across
+// the container's width, no matter how many elements there are.
+// ================================================================================================
 
 .distribute-center(@overflow: hidden, @offset-v: 1px) {
 	text-align: justify;
@@ -97,7 +135,15 @@
 	}
 }
 
-.sticky-footer(@footer-height: @footer-height) {
+
+// ==============================================================================================
+// Gives you a sticky footer when you put it on the html element and set the `@footer-y` variable
+// correctly in `sizes.less`. But heed the warning on `.clearer()` below.
+//
+// Source: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/
+// ==============================================================================================
+
+.sticky-footer(@footer-y: @footer-y) {
 	&, body {
 		height: 100%;
 	}
@@ -106,11 +152,11 @@
 		min-height: 100%;
 		height: auto !important;
 		height: 100%;
-		margin: 0 auto -@footer-height;
+		margin: 0 auto -@footer-y;
 	}
 
 	footer, #push {
-		height: @footer-height;
+		height: @footer-y;
 	}
 
 	body.admin-menu {
@@ -122,6 +168,11 @@
 		.sticky-footer-cancel();
 	}
 }
+
+
+// =====================================
+// Does exactly what it says on the tin.
+// =====================================
 
 .sticky-footer-cancel() {
 	&, body {
@@ -143,22 +194,39 @@
 	}
 }
 
+
+// =============================================================================================
+// Can be applied to any element to make floats behave. Should also be your first suspect if you
+// have a problem getting your sticky footer to stick.
+// =============================================================================================
+
 .clearer() {
 	&:after {
 		content: ".";
 		display: block;
 		font-size: 0.1px;
+		line-height: 0px;
 		height: 0px;
 		clear: both;
 		visibility: hidden;
 	}
 }
 
+
+// =================
+// Self-explanatory.
+// =================
+
 .clearer-cancel() {
 	&:after {
 		content: none;
 	}
 }
+
+
+// =======================================================
+// Can be applied to `<ul>`s and `<ol>`s to regain sanity.
+// =======================================================
 
 .list-reset() {
 	display: block;
@@ -170,6 +238,11 @@
 	list-style-image: none;
 }
 
+
+// ======================
+// For image replacement.
+// ======================
+
 .hide-text() {
 	font-size: 0.1px;
 	text-indent: 100%;
@@ -178,9 +251,14 @@
 	display: block;
 }
 
+
+// ==============================================
+// Centered floats! What will they think of next?
+// ==============================================
+
 .centered-menu(@overflow: hidden) {
 	width: 100%;
-	overflow: @overflow; // Comment out sometimes?
+	overflow: @overflow; // Needs to be visible sometimes, as with dropdowns
 
 	> ul {
 		position: relative;
@@ -194,6 +272,12 @@
 		}
 	}
 }
+
+
+// =================================================================================================
+// The next three use absolute positioning and CSS transforms to absolutely center objects on one or
+// both axes. Should be used as a last resort.
+// =================================================================================================
 
 .vertical-center() {
 	position: absolute;
