--- a/css/base/sizes.less
+++ b/css/base/sizes.less
@@ -29,7 +29,33 @@
 @mobile-large-min: 500px;
 	@mobile-small-max: (@mobile-large-min - 1px);
 
-@footer-height: 200px;
+
+/*
+ * I use shorthand suffixes for variable names in this file.
+ *
+ * n  = top (north)
+ * s  = south (bottom)
+ * w  = west (left)
+ * e  = east (right)
+ *
+ * x  = x-axis, horizontal, width, both 'w' and 'e'
+ * y  = y-axis, vertical, height, both 'n' and 's'
+ *
+ * m  = margin
+ * p  = padding
+ * fs = font-size
+ * lh = line-height
+ * d  = delta (difference)
+ *
+ * The suffixes can be combined. Examples:
+ * @nav-px = Nav padding-left and padding-right
+ * @footer-my = Footer margin-top and margin-bottom
+ * @sidebar-pn = Sidebar padding-top
+ * @header-y = Total header height (usually including padding and border, as implied by the border-box model this theme uses everywhere by default, but also sometimes in the content-box model)
+ */
+
+
+@footer-y: 200px;
 
 @admin-menu-y: 30px;
 @admin-menu-shortcut-y: 34px;
