--- a/css/copy_me.less
+++ b/css/copy_me.less
@@ -1,5 +1,5 @@
 @import "base/base.less";    // Keep at top of file
-@import "global.less" // Keep at top of file
+@import "global.less"; // Keep at top of file
 
 
 
