--- a/css/global.less
+++ b/css/global.less
@@ -3,6 +3,11 @@
 	-moz-box-sizing: border-box;
 }
 
+html, body {
+	margin: 0px;
+	padding: 0px;
+}
+
 ul.tabs, ul.tabs * {
 	box-sizing: content-box;
 	-moz-box-sizing: content-box;
@@ -10,7 +15,7 @@ ul.tabs, ul.tabs * {
 
 table {
 	width: 100%;
-	
+
 	td, th {
 		padding: 3px;
 		vertical-align: middle;
