--- a/css/zen/tabs.css
+++ b/css/zen/tabs.css
@@ -8,16 +8,17 @@
     background-image: -o-linear-gradient(bottom, #bbbbbb 1px, transparent 1px);
     background-image: linear-gradient(bottom, #bbbbbb 1px, transparent 1px);
     list-style: none;
+    border-bottom: 0px none;
     border-bottom: 1px solid #bbb \0/ie;
     margin: 1.5em 0;
     padding: 0 2px;
-    white-space: nowrap
+    white-space: nowrap;
 }
 .tabs.primary li,
 .tabs.secondary li,
 .tabs.secondary li.active {
     float: left;
-    margin: 0 3px
+    margin: 0 3px;
 }
 .tabs.primary a,
 .tabs.secondary a {
@@ -26,7 +27,8 @@
     border-bottom: 0;
     display: block;
     line-height: 1.5em;
-    text-decoration: none
+    text-decoration: none;
+    margin: 0px;
 }
 .tabs.primary li,
 .tabs.primary li.active {
@@ -42,7 +44,7 @@
     border-bottom: 0 \0/ie
 }
 .tabs.primary li.active {
-    border-bottom-color: #fff
+    border-bottom-color: #fff;
 }
 
 .tabs.primary a,
@@ -61,13 +63,13 @@
     background-color: #dedede;
     letter-spacing: 1px;
     padding: 0 1em;
-    text-align: center
+    text-align: center;
 }
 
 .tabs.primary a:hover,
 .tabs.primary a:focus {
     background-color: #e9e9e9;
-    border-color: #f2f2f2
+    border-color: #f2f2f2;
 }
 .tabs.primary a:active,
 .tabs.primary a.active {
@@ -79,15 +81,15 @@
     background-image: -moz-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
     background-image: -o-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
     background-image: linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
-    border-color: #fff
+    border-color: #fff;
 }
 .tabs.secondary {
     font-size: .9em;
-    margin-top: -1.5em
+    margin-top: -1.5em;
 }
 .tabs.secondary li,
 .tabs.secondary li.active {
-    margin: 0.75em 3px
+    margin: 0.75em 3px;
 }
 .tabs.secondary a,
 .tabs.secondary a.active {
@@ -103,18 +105,18 @@
     text-shadow: 1px 1px 0 #fff;
     background-color: #f2f2f2;
     color: #666;
-    padding: 0 .5em
+    padding: 0 .5em;
 }
 .tabs.secondary a:hover,
 .tabs.secondary a:focus {
     background-color: #dedede;
     border-color: #999;
-    color: #333
+    color: #333;
 }
 .tabs.secondary a:active,
 .tabs.secondary a.active {
     text-shadow: 1px 1px 0 #333;
     background-color: #666;
     border-color: #000;
-    color: #fff
+    color: #fff;
 }
