Less variable injection, plus bugfixes

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -1,11 +1,11 @@
-/////////////////// 
+///////////////////
 // Media Queries //
 ///////////////////
 
 // Large desktop only
 
 @media only screen and (min-width: @desktop-large-min) {
-	
+
 }
 
 // Small desktop and lower
@@ -28,6 +28,6 @@
 
 // All mobile
 
-@media only screen and (max-width: @mobile-large-max) {
+@media only screen and (max-width: @mobile-max) {
 
 }
