Fix size suffix comment

--- a/css/base/sizes.less
+++ b/css/base/sizes.less
@@ -34,9 +34,9 @@
  * I use shorthand suffixes for variable names in this file.
  *
  * n  = top (north)
- * s  = south (bottom)
- * w  = west (left)
- * e  = east (right)
+ * s  = bottom (south)
+ * w  = left (west)
+ * e  = right (east)
  *
  * x  = x-axis, horizontal, width, both 'w' and 'e'
  * y  = y-axis, vertical, height, both 'n' and 's'
