Settle on #site-name as the ID of the site logo in header

--- a/css/conditional/print.less
+++ b/css/conditional/print.less
@@ -63,3 +63,11 @@ div.tabs,
 #page-wrapper {
   overflow-y: visible;
 }
+
+#site-name img {
+  display: block;
+}
+
+#site-name span {
+  display: none;
+}
