--- a/scss/base/_mixins-generic.scss
+++ b/scss/base/_mixins-generic.scss
@@ -238,7 +238,6 @@
 // -------------------------------------------------------
 // Can be applied to `<ul>`s and `<ol>`s to regain sanity.
 // -------------------------------------------------------
-
 @mixin list-reset()
 {
 	display: block;
@@ -254,7 +253,6 @@
 // ----------------------
 // For image replacement.
 // ----------------------
-
 @mixin hide-text()
 {
 	font-size: 0.1px;
@@ -268,7 +266,6 @@
 // ----------------------------------------------
 // Centered floats! What will they think of next?
 // ----------------------------------------------
-
 @mixin centered-menu($overflow: hidden)
 {
 	width: 100%;
@@ -313,4 +310,27 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+// --------------------------------------
+// Standard link-that-looks-like-a-button
+// --------------------------------------
+@mixin link-button($color, $hover-color)
+{
+	text-align: center;
+	display: inline-block;
+	font-weight: bold;
+	font-size: 16px;
+	padding: 8px 12px;
+
+	&, &:link, &:visited, &:hover, &:active {
+		color: white;
+		background-color: $color;
+	//	background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), $color;
+		text-decoration: none;
+	}
+
+	&:hover, &:active {
+		background-color: $hover-color;
+	}
 }
