--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,6 @@
-@import "_colors.scss";
-@import "_sizes.scss";
-@import "_fonts.scss";
+@import "__colors.scss";
+@import "__sizes.scss";
+@import "__fonts.scss";
 
-@import "_mixins-site.scss";
-@import "_mixins-generic.scss";
+@import "__mixins-site.scss";
+@import "__mixins-generic.scss";
