--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,5 @@
 @import "__colors.scss";
-@import "__sizes.scss";
+@import "__dimensions.scss";
 @import "__fonts.scss";
 
 @import "__mixins-generic.scss";
